--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource-variable/source-serif-4": "^5.2.9",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.16.6",
+    "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
